2008-07-27 Jim Garlick <garlick@llnl.gov>

	* etc/cyclades-pm10.dev, etc/cyclades-pm8.dev : Simplified.

	* test/cyclades.c, test/t46 : Add cyclades tests.

2008-07-26 Jim Garlick <garlick@llnl.gov>

	* test/phantom.c, t45 : Add phantom tests.

	* etc/phantom.dev : Make it work for v3 and v4.

	* etc/phantom4.dev : Removed.

	* config/ac_curses.m4 : Added curses config check, needed by phantom.

2008-07-05 Jim Garlick <garlick@llnl.gov>

	* src/xread.c : Add xreadline().

2008-07-03 Jim Garlick <garlick@llnl.gov>

	* etc/ilom.dev, test/ilom.c, test/t44 : Added reset support.

2008-07-02 Jim Garlick <garlick@llnl.gov>

	* etc/ilom-inline.dev : Removed.

	* etc/ilom.dev : Added, new and improved.

	* test/t44, test/ilom.c : Test for above.

	* src/devices.c : Call device disconnect method during
	device teardown, which occurs as a result of receiving a SIGINT.

2008-06-30 Jim Garlick <garlick@llnl.gov>

	* src/plmpower.c : Fix compilation #if !HAVE_GETOPT_LONG.

	* test/t25.conf : Relax timeout for slow AIX test system.

	* src/device.c : Use actual number of bytes in buffer instead of
	maximum expanded size of buffer to copy buffer contents into for
	regex match.  This 64k memory allocation would fail on AIX in t35-t36.

	* src/xpty.c : xcfmakeraw(): check properly for tcsetattr errors().

	* src/xpty.c : Avoid cfmakeraw() on AIX.  This fixed failures on 
	tests t21-t24,t27-t28,t38.

	* src/powerman.c : Stop leaking a file descriptor for duped stderr
	in _connect_to_server_pipe().

2008-06-29 Jim Garlick <garlick@llnl.gov>

	* src/httppower.c, src/Makefile.am, config/ac_readline.m4,
	configure.ac : Drop readline dependency.

	* test/dli.c, test/t42, test/t43 : Test for DLI LPC device.

2008-06-28 Jim Garlick <garlick@llnl.gov>

	* src/plmpower.c : Tighten up PLM synchronization and clean up:
	- Send X10 commands 3 times (override with -x option)
	- Handle PLM-not-ready NAK properly.
	- Timeout/retry (1s) insteon packets (override timeout with -t option).