@@ -1,0 +1,3 @@
+include "../etc/ipmipower.dev"
+device "d0" "ipmipower" "./ipmipower -h t[0-15]|&"
+node "t[0-15]" "d0"
