@@ -3,4 +3,4 @@
 if [ "$PATH_POWERMAND" = "" ]; then
     PATH_POWERMAND=../src/powermand
 fi
-$PATH_POWERMAND -f -c test4.conf -s -R
+$PATH_POWERMAND -f -c t47.conf -s -R
